Kubernetes/clusters/docker-desktop/infra/policy/network/default-deny.yaml
# infra/policy/network/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: apps
spec:
  podSelector: {} # ns 내 모든 pod
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress:
    # DNS 허용
    - to:
        - namespaceSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
